--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,10 +29,10 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Our Search Engine!</h1>
+    <h1>Welcome to Our Movie Search Engine!</h1>
     <div class="nav-links">
         <a href="/login">Login</a>
-        <a href="/signup">Sign Up</a>
+        <a href="/register">Sign Up</a>
         <% if (user) { %>
             <a href="/search">Search</a>
         <% } %>
