--- a/views/login.ejs
+++ b/views/login.ejs
@@ -63,7 +63,7 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a href="/views/register.ejs">Sign up</a></p>
+        <p>Don't have an account? <a href="/register">Sign up</a></p>
     </div>
 </body>
 </html>
