--- a/views/search.ejs
+++ b/views/search.ejs
@@ -80,7 +80,7 @@
             <% }); %>
         </div>
     <% } else { %>
-        <p>No results found for '<%= query %>'.</p>
+        <center><p>No results found for '<%= query %>'.</p></center>
     <% } %>
     
 </body>
